--- a/K_means_ML.ipynb
+++ b/K_means_ML.ipynb
@@ -471,11 +471,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# optimal number of clusters = 5, the point where the last elbow occurs"
+    "# optimal number of clusters = 5, the point where the last elbow occurs before the graph becomes linear"
    ]
   },
   {
